Updating project structure and cmake_build.sh

--- a/arduino/CMakeLists.txt
+++ b/arduino/CMakeLists.txt
@@ -1,3 +1,7 @@
+cmake_minimum_required(VERSION 3.8.2)
+
+project(Tiny2Wheel_arduino)
+
 arduino_cmake_project(T2W_arduino BOARD_NAME uno)
 
 add_arduino_executable(T2W_arduino hello_world.cpp)
