--- a/cli/src/CMakeLists.txt
+++ b/cli/src/CMakeLists.txt
@@ -1,5 +1,10 @@
-include_directories(../include)
+find_package(Threads REQUIRED)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+include_directories(${CMAKE_SOURCE_DIR}/include)
+include_directories(${CMAKE_SOURCE_DIR}/include/asio)
+include_directories(${CMAKE_SOURCE_DIR}/include/asio/include)
+include_directories(${CMAKE_SOURCE_DIR}/include/json/include/nlohmann)
 
-add_executable(Tiny2Wheel_cli main.cpp test.cpp)
+add_executable(${CMAKE_PROJECT_NAME} main.cpp async_serial.cpp)
+target_link_libraries(${CMAKE_PROJECT_NAME} ws2_32 nlohmann_json::nlohmann_json Threads::Threads)
+
